--- a/assets/www/style.css
+++ b/assets/www/style.css
@@ -1,6 +1,9 @@
 html,body {
  width:100%; height:100%; margin:0; padding: 0; border:none;
  overflow: hidden;
+ -webkit-transform-origin: 0 0;
+ -moz-transform-origin: 0 0;
+ transform-origin: 0 0;
 }
 body { background: #008; }
 
