--- a/assets/www/style.css
+++ b/assets/www/style.css
@@ -1400,16 +1400,11 @@ body { background: #008; }
 
 #menu .level > .background {
   position: absolute;
-  width: 400%; height: 400%;
+  width: 100%; height: 100%;
   bottom: 0; left: 0;
   background-repeat: repeat-x;
   background-position: bottom;
-  -webkit-transform: scale3d(0.25,0.25,1);
-     -moz-transform: scale(0.25,0.25);
-          transform: scale(0.25,0.25);
-  -webkit-transform-origin: bottom left;
-     -moz-transform-origin: bottom left;
-          transform-origin: bottom left;
+  background-size: 1px 100%;
 }
 #menu .level.grass > .background {
   background-color: #000;
@@ -1431,25 +1426,17 @@ body { background: #008; }
 }
 #menu .level.grass > .background .stars,
 #menu .level.mountains > .background .stars {
-  position: absolute; left: 0; top: 0; height: 25%; width: 25%;
+  position: absolute; left: 0; top: 0; height: 100%; width: 100%;
   background: url('images/star-tile.png') repeat;
-  /* scale up because background layer is scaled down 4x */
-  -webkit-transform: scale3d(4,4,1);
-     -moz-transform: scale(4,4);
-          transform: scale(4,4);
-  -webkit-transform-origin: top left;
-     -moz-transform-origin: top left;
-          transform-origin: top left;
 }
 #menu .level.mountains > .background .mountains {
-  position: absolute; left: 0; right: 0; bottom: 0; height: 495px;
+  position: absolute; left: -25%; right: -25%; bottom: 0; height: 495px;
   background: url('images/level2-mountains.png') repeat-x;
   background-position: bottom center;
-  /* scale up because background layer is scaled down 4x */
-  /* but we also want to scale the whole thing from 2400px to 1600px (66%) */
-  -webkit-transform: scale3d(2.667,2.667,1);
-     -moz-transform: scale(2.667,2.667);
-          transform: scale(2.667,2.667);
+  /* scale the whole thing from 2400px to 1600px (66%) */
+  -webkit-transform: scale3d(.667,.667,1);
+     -moz-transform: scale(.667,.667);
+          transform: scale(.667,.667);
   -webkit-transform-origin: bottom center;
      -moz-transform-origin: bottom center;
           transform-origin: bottom center;
