--- a/assets/www/style.css
+++ b/assets/www/style.css
@@ -204,6 +204,8 @@ body { background: #008; }
   background-position: bottom;
   background-size: 100% 100%;
 }
+
+/* different backgrounds for each level */
 .level.level1 #background {
   background-image: url('images/level1-back.png');
 }
@@ -221,6 +223,16 @@ body { background: #008; }
   background-image:    -moz-linear-gradient(bottom, #fff, #fcffa5 10%, #0ff 38%, #00f 67%, #000 100%);
   background-image:         linear-gradient(to top, #fff, #fcffa5 10%, #0ff 38%, #00f 67%, #000 100%);
 }
+.level.level3 #background {
+  background-image: url('images/level3-back.png');
+}
+.anim .level.level3 #background {
+  background-image: -webkit-linear-gradient(top, #000, #8282ff 33%, #fff0be 62%, #fff6d5 85%, #fffef4 96%, #f9ff9f 100%);
+  background-image:    -moz-linear-gradient(top, #000, #8282ff 33%, #fff0be 62%, #fff6d5 85%, #fffef4 96%, #f9ff9f 100%);
+  background-image:         linear-gradient(to bottom, #000, #8282ff 33%, #fff0be 62%, #fff6d5 85%, #fffef4 96%, #f9ff9f 100%);
+}
+
+
 #background .satellite1,
 #background .satellite2,
 #background .cloud {
@@ -239,6 +251,12 @@ body { background: #008; }
   height: 117px;
   background-image: url('images/satellite2.png');
   top: 25%;
+}
+.level.level3 #background .satellite2 {
+  height: 216px;
+  background-image: url('images/shuttle.png');
+  background-repeat: no-repeat;
+  margin-top: -121px;
 }
 
 #background .cloud {
@@ -265,11 +283,25 @@ body { background: #008; }
   background-position: 0 0;
 }
 
-.level.level2 #background .mountain {
+#background .mountain {
   position: absolute; left: 0; right: 0; bottom: 0;
-  height: 495px;
-  background: url('images/level2-mountains.png') repeat-x;
   background-position: center bottom;
+  background-repeat: repeat-x;
+}
+.level.level2 #background .mountain {
+  height: 495px;
+  background-image: url('images/level2-mountains.png');
+}
+.level.level3 #background .mountain {
+  height: 499px;
+  background-image: url('images/level3-sand.png');
+}
+.level.level3 #background .troposphere > .sun {
+  position: absolute;
+  left: 85px; top: 25%;
+  width: 278px; height: 174px;
+  background: url('images/level3-sun.png') no-repeat;
+  margin-top: -116px;
 }
 
 #awards .strip,
@@ -296,40 +328,52 @@ body { background: #008; }
      -moz-transform: translate(0,138px);
           transform: translate(0,138px);
 }
-.level.level1 #awards .award.a1 {
+.level.level1 #awards .award.a1,
+.level.level3 #awards .award.a1 {
   background-image: url('images/award1.png');
 }
-.level.level1 #awards .award.a2 {
+.level.level1 #awards .award.a2,
+.level.level3 #awards .award.a2 {
   background-image: url('images/award2.png');
 }
-.level.level1 #awards .award.a3 {
+.level.level1 #awards .award.a3,
+.level.level3 #awards .award.a3 {
   background-image: url('images/award3.png');
 }
-.level.level1 #awards .award.a4 {
+.level.level1 #awards .award.a4,
+.level.level3 #awards .award.a4 {
   background-image: url('images/award4.png');
 }
-.level.level1 #awards .award.a5 {
+.level.level1 #awards .award.a5,
+.level.level3 #awards .award.a5 {
   background-image: url('images/award5.png');
 }
-.level.level1 #awards .award.a6 {
+.level.level1 #awards .award.a6,
+.level.level3 #awards .award.a6 {
   background-image: url('images/award6.png');
 }
-.level.level2 #awards .award.a1 {
+.level.level2 #awards .award.a1,
+.level.level4 #awards .award.a1 {
   background-image: url('images/award7.png');
 }
-.level.level2 #awards .award.a2 {
+.level.level2 #awards .award.a2,
+.level.level4 #awards .award.a2 {
   background-image: url('images/award8.png');
 }
-.level.level2 #awards .award.a3 {
+.level.level2 #awards .award.a3,
+.level.level4 #awards .award.a3 {
   background-image: url('images/award9.png');
 }
-.level.level2 #awards .award.a4 {
+.level.level2 #awards .award.a4,
+.level.level4 #awards .award.a4 {
   background-image: url('images/award10.png');
 }
-.level.level2 #awards .award.a5 {
+.level.level2 #awards .award.a5,
+.level.level4 #awards .award.a5 {
   background-image: url('images/award11.png');
 }
-.level.level2 #awards .award.a6 {
+.level.level2 #awards .award.a6,
+.level.level4 #awards .award.a6 {
   background-image: url('images/award12.png');
 }
 #awards .award.show {
@@ -379,6 +423,9 @@ body { background: #008; }
   transition-duration: 1.5s;
   transition-timing-function: ease-in-out;
   transform-origin: 70px bottom;
+}
+.level.level3 #sprouts .award {
+  background-image: url('images/sprout1-lg-level3.png');
 }
 #sprouts .award.show {
   -webkit-transform: translate3d(0,0,0);
@@ -865,6 +912,100 @@ body { background: #008; }
   background-image: url('images/button-word-cab.png');
 }
 
+/* payloads for "sand" level */
+.level.level3 #buttons > a.black {
+  background-color: #777;
+}
+.level.level3.ground #buttons > a.black,
+.level.level3.troposphere #buttons > a.black {
+  background-image: url('images/button-word-bat.png');
+}
+.level.level3.ground #buttons > a.lilac,
+.level.level3.troposphere #buttons > a.lilac {
+  background-image: url('images/button-word-mat.png');
+}
+.level.level3.ground #buttons > a.orange,
+.level.level3.troposphere #buttons > a.orange {
+  background-image: url('images/button-word-cat.png');
+}
+.level.level3.ground #buttons > a.yellow,
+.level.level3.troposphere #buttons > a.yellow {
+  background-image: url('images/button-word-cab.png');
+}
+.level.level3.stratosphere #buttons > a.black,
+.level.level3.mesosphere #buttons > a.black {
+  background-image: url('images/button-bat.png');
+}
+.level.level3.stratosphere #buttons > a.lilac,
+.level.level3.mesosphere #buttons > a.lilac {
+  background-image: url('images/button-mat.png');
+}
+.level.level3.stratosphere #buttons > a.orange,
+.level.level3.mesosphere #buttons > a.orange {
+  background-image: url('images/button-cat.png');
+}
+.level.level3.stratosphere #buttons > a.yellow,
+.level.level3.mesosphere #buttons > a.yellow {
+  background-image: url('images/button-cab.png');
+}
+
+.level.level3.ground #balloons .black > .payload {
+  background-image: url('images/tag-black-bat.png');
+}
+.level.level3.ground #balloons .lilac > .payload {
+  background-image: url('images/tag-lilac-mat.png');
+}
+.level.level3.ground #balloons .orange > .payload {
+  background-image: url('images/tag-orange-cat.png');
+}
+.level.level3.ground #balloons .yellow > .payload {
+  background-image: url('images/tag-yellow-cab.png');
+}
+
+.level.level3.troposphere #balloons .balloon {
+  background-image: url('images/balloon-white.png');
+}
+.level.level3.troposphere #balloons .black > .payload {
+  background-image: url('images/tag-white-bat-bw.png');
+}
+.level.level3.troposphere #balloons .lilac > .payload {
+  background-image: url('images/tag-white-mat-bw.png');
+}
+.level.level3.troposphere #balloons .orange > .payload {
+  background-image: url('images/tag-white-cat-bw.png');
+}
+.level.level3.troposphere #balloons .yellow > .payload {
+  background-image: url('images/tag-white-cab-bw.png');
+}
+
+.level.level3.stratosphere #balloons .black > .payload {
+  background-image: url('images/tag-black-word-bat.png');
+}
+.level.level3.stratosphere #balloons .lilac > .payload {
+  background-image: url('images/tag-lilac-word-mat.png');
+}
+.level.level3.stratosphere #balloons .orange > .payload {
+  background-image: url('images/tag-orange-word-cat.png');
+}
+.level.level3.stratosphere #balloons .yellow > .payload {
+  background-image: url('images/tag-yellow-word-cab.png');
+}
+
+.level.level3.mesosphere #balloons .balloon {
+  background-image: url('images/balloon-white.png');
+}
+.level.level3.mesosphere #balloons .black > .payload {
+  background-image: url('images/tag-white-word-bat.png');
+}
+.level.level3.mesosphere #balloons .lilac > .payload {
+  background-image: url('images/tag-white-word-mat.png');
+}
+.level.level3.mesosphere #balloons .orange > .payload {
+  background-image: url('images/tag-white-word-cat.png');
+}
+.level.level3.mesosphere #balloons .yellow > .payload {
+  background-image: url('images/tag-white-word-cab.png');
+}
 
 /* ------------------ balloon animations ------------------- */
 @-webkit-keyframes balloon-squirt {
@@ -1398,7 +1539,8 @@ body { background: #008; }
     transform: translate(-800px,0);
   }
 }
-.anim .level.level2 #background .cloud.c1 {
+.anim .level.level2 #background .cloud.c1,
+.anim .level.level3 #background .satellite2 {
   -webkit-animation: meteor-background-drift 200s infinite normal none linear;
      -moz-animation: meteor-background-drift 200s infinite normal none linear;
           animation: meteor-background-drift 200s infinite normal none linear;
@@ -1445,14 +1587,16 @@ body { background: #008; }
   background-repeat: repeat-x;
   background-position: bottom;
   background-size: 100% 100%;
+  background-color: #000;
 }
 #menu .level.level1 > .background {
-  background-color: #000;
   background-image: url('images/level1-back.png');
 }
 #menu .level.level2 > .background {
-  background-color: #000;
   background-image: url('images/level2-menu-back.png');
+}
+#menu .level.level3 > .background {
+  background-image: url('images/level3-back.png');
 }
 .anim #menu .level.level1 > .background {
   background-image: -webkit-linear-gradient(bottom, #0ff, #0ff 9%, #00f 17%, #00f 28%, #008 50%, #000 100%);
@@ -1464,22 +1608,52 @@ body { background: #008; }
   background-image:    -moz-linear-gradient(bottom, #fcffa5, #0ff 43%, #00f 71%, #000 100%);
   background-image:         linear-gradient(to top, #fcffa5, #0ff 43%, #00f 71%, #000 100%);
 }
+.anim #menu .level.level3 > .background {
+  background-image: -webkit-linear-gradient(top, #000, #8282ff 33%, #fff0be 62%, #fff6d5 85%, #fffef4 96%, #f9ff9f 100%);
+  background-image:    -moz-linear-gradient(top, #000, #8282ff 33%, #fff0be 62%, #fff6d5 85%, #fffef4 96%, #f9ff9f 100%);
+  background-image:         linear-gradient(to bottom, #000, #8282ff 33%, #fff0be 62%, #fff6d5 85%, #fffef4 96%, #f9ff9f 100%);
+}
+
 #menu .level.level1 > .background .stars,
-#menu .level.level2 > .background .stars {
+#menu .level.level2 > .background .stars,
+#menu .level.level3 > .background .stars {
   position: absolute; left: 0; top: 0; height: 100%; width: 100%;
   background: url('images/star-tile.png') repeat;
 }
-#menu .level.level2 > .background .mountains {
-  position: absolute; left: -25%; right: -25%; bottom: 0; height: 495px;
-  background: url('images/level2-mountains.png') repeat-x;
+#menu .level > .background .mountains {
+  position: absolute; left: -25%; right: -25%; bottom: 0;
   background-position: bottom center;
-  /* scale the whole thing from 2400px to 1600px (66%) */
-  -webkit-transform: scale3d(.667,.667,1);
-     -moz-transform: scale(.667,.667);
-          transform: scale(.667,.667);
+  background-repeat: repeat-x;
   -webkit-transform-origin: bottom center;
      -moz-transform-origin: bottom center;
           transform-origin: bottom center;
+  /* scale down level art to about 66% for menu screen */
+  -webkit-transform: scale3d(.667,.667,1);
+     -moz-transform: scale(.667,.667);
+          transform: scale(.667,.667);
+}
+#menu .level.level2 > .background .mountains {
+  height: 495px;
+  background-image: url('images/level2-mountains.png');
+  /* scale the whole thing from 2400px to 1600px (66%) */
+}
+#menu .level.level3 > .background .mountains {
+  height: 499px;
+  background-image: url('images/level3-sand.png');
+  /* scale the whole thing down from 2200px (let's say 66%) */
+}
+#menu .level.level3 > .background .sun {
+  position: absolute;
+  width: 278px; height: 174px;
+  background: url('images/level3-sun.png') no-repeat;
+  top: -50px; left: 140px;
+  /* scale the whole thing down (let's say 66%) */
+  -webkit-transform: scale3d(.667,.667,1);
+     -moz-transform: scale(.667,.667);
+          transform: scale(.667,.667);
+  -webkit-transform-origin: top left;
+     -moz-transform-origin: top left;
+          transform-origin: top left;
 }
 #menu .nells .ground .nell {
   position: absolute;
@@ -1526,6 +1700,9 @@ body { background: #008; }
   background-image: url('images/sprout1-lgr.png');
   width: 326px; height: 1207px;
   bottom: 30px; left: 13px;
+}
+#menu .level.level3 .sprout {
+  background-image: url('images/sprout1-lgr-level3.png');
 }
 #menu .clouds .grass {
   position: absolute; bottom: 0; left: 0;
@@ -1662,6 +1839,19 @@ body { background: #008; }
 }
 #menu .level.level2 .awards .mesosphere .tag {
   background-image: url('images/tag-white-word-cat.png');
+}
+/* tags from desert level */
+#menu .level.level3 .awards .ground .tag {
+  background-image: url('images/tag-yellow-cab.png');
+}
+#menu .level.level3 .awards .troposphere .tag {
+  background-image: url('images/tag-white-cab-bw.png');
+}
+#menu .level.level3 .awards .stratosphere .tag {
+  background-image: url('images/tag-yellow-word-cab.png');
+}
+#menu .level.level3 .awards .mesosphere .tag {
+  background-image: url('images/tag-white-word-cab.png');
 }
 /* pulse the tags to make it clear they are touchable */
 @-webkit-keyframes menu-tag-throb {
